# Aircraft_Cargo_Blance_System

./: .gitignore  LICENSE  README.md  README.zh_CN.md  package-lock.json  package.json
backend/: CMakeLists.txt  readme.md
backend/app/: conveyor_status.cpp  led  led.cpp
backend/app/balance_rate/: balance_rate.cpp  balance_rate.hpp
backend/app/controller/: controller.cpp  controller.hpp  controller_lod.cpp  controller_lod.hpp
backend/app/conveyor_status/: conveyor_status.cpp  conveyor_status.hpp
backend/app/led1/: button.cpp  button.hpp
backend/app/led_control/: button.cpp  button.hpp  led.cpp  led.hpp  main.cpp
backend/app/motor_driver/: motor  motor_driver  motor_driver.cpp  motor_driver.hpp  motor_driver_main.cpp
backend/app/stepping_motor/alarm/: alarm.cpp  alarm.hpp
backend/app/stepping_motor/left/: left.cpp  left.hpp
backend/app/stepping_motor/pause/: pause.cpp  pause.hpp
backend/app/stepping_motor/right/: right.cpp  right.hpp
backend/app/weight_reader/: weight_reader  weight_reader.cpp
backend/app/weight_sensor/: main.cpp
backend/app/weight_sensor/WeightSensor/: WeightSensor.cpp  WeightSensor.hpp
backend/app/weight_sensor/hx711_sensor/: hx711_sensor.cpp  hx711_sensor.hpp
backend/app/weight_sensor/w1/: w1.cpp  w1.hpp
backend/app/weight_sensor/w2/: w2.cpp  w2.hpp
backend/app/weight_sensor/w3/: w3.cpp  w3.hpp
backend/app/weight_sensor/w4/: w4.cpp  w4.hpp
backend/app/weight_sensor/w5/: w5.cpp  w5.hpp
backend/include/: AbstractScale.h  AdvancedHX711.h  GpioException.h  HX711.h  IntegrityException.h  Mass.h  SimpleHX711.h  TimeoutException.h  Utility.h  Value.h  ValueStack.h  Watcher.h  common.h
backend/socket/: gpio_lock.hpp  main.cpp  send_message.cpp  send_message.hpp  server  server.cpp  websocket_session.cpp  websocket_session.hpp  websocket_session_button.cpp  websocket_session_button.hpp  websocket_session_main.cpp  websocket_session_main.hpp
backend/tests/: motor_driver_test.cpp  readme.md  weight_sensor_test.cpp
frontend/: README.md
frontend/src/: main.js
frontend/src/assets/scss/: index.scss
frontend/src/components/echart/: balance.vue  light.vue
frontend/src/components/echart/bottom/: bottomLeftChart.vue  conveyorChart.vue
frontend/src/views/: index.vue  simulation.vue  status.vue
readme/: README.zh_CN.md
web/: README.md  package.json
web/src/assets/scss/: index.scss  style.scss
web/src/components/echart/: balance.vue
web/src/views/: index.vue  simulation.vue  status.vue
